# pymagnitude_http_api

./: .gitignore  Dockerfile  README.md  Taskfile.yml  compose.yml  lib.py  mag.py  main.ipynb  main.py  pyproject.toml  w2v.ipynb
test/: post.http
