[tool.poetry]
name = "pymagnitude-test"
version = "0.1.0"
description = ""
authors = ["kaiiy <81578246+kaiiy@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "pymagnitude_test"}]

[tool.poetry.dependencies]
python = "~3.9"
gensim = "^4.2.0"
pyemd = "^0.5.1"
mecab-python3 = "^1.0.5"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
